--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,10 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ListDataActivity"
+            android:exported="true">
 
+        </activity>
     </application>
 
 </manifest>
